--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="/resources/img/logo/logo.jpg" alt="" class="img-fluid">
+                <img src="resources/img/logo/logo.jpg" alt="" class="img-fluid">
                 <h1>Mental Health our Priority<span>.</span></h1>
             </a>
             <nav id="navbar" class="navbar">
@@ -146,7 +146,7 @@
                         <div class="swiper-wrapper align-items-center">
 
                             <div class="swiper-slide">
-                                <img src="/resources/img/events/events-1.jpg" alt="">
+                                <img src="resources/img/events/events-1.jpg" alt="">
                                 <div class="slide-text">
                                     <h2>Graduation Ceremony</h2>
                                     <p>Dr. John Chrysostom Muyingo presenting an award to Best Student</p>
@@ -154,7 +154,7 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="/resources/img/events/events-2.jpg" alt="">
+                                <img src="resources/img/events/events-2.jpg" alt="">
                                 <div class="slide-text">
                                     <h2>Graduation Ceremony</h2>
                                     <p>Dr. John Chrysostom Muyingo in the company of staff members</p>
@@ -162,7 +162,7 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="/resources/img/events/events-3.jpg" alt="">
+                                <img src="resources/img/events/events-3.jpg" alt="">
                                 <div class="slide-text">
                                     <h2>Graduation Ceremony</h2>
                                     <p>Dr. John Chrysostom Muyingo with the Principal and Chairperson Board of Governors.</p>
@@ -170,7 +170,7 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="/resources/img/events/events-4.jpg" alt="">
+                                <img src="resources/img/events/events-4.jpg" alt="">
                                 <div class="slide-text">
                                     <h2>Graduation Ceremony</h2>
                                     <p>Students of the school during graduation ceremony</p>
@@ -206,7 +206,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-                        <img src="/resources/img/about/principal.jpg" class="img-fluid" width="100%">
+                        <img src="resources/img/about/principal.jpg" class="img-fluid" width="100%">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
                         <h3>Principal's Message</h3>
@@ -297,7 +297,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-                        <img src="/resources/img/admissions/admission.jpg" class="img-fluid" alt="">
+                        <img src="resources/img/admissions/admission.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
                         <h3>Admission Requirements.</h3>
@@ -362,20 +362,20 @@
                 <div class="row" data-aos="zoom-in" data-aos-delay="100">
                     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="/resources/img/partners/partners-1.jpg" class="img-fluid" alt="">
+                            <img src="resources/img/partners/partners-1.jpg" class="img-fluid" alt="">
 
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="/resources/img/partners/partners-2.jpg" class="img-fluid" alt="">
+                            <img src="resources/img/partners/partners-2.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="/resources/img/partners/partners-3.jpg" class="img-fluid" alt="">
+                            <img src="resources/img/partners/partners-3.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
 
@@ -406,7 +406,7 @@
                         <div class="swiper-slide">
                             <div class="future-plans-wrap">
                                 <div class="future-plans-item">
-                                    <img src="/resources/img/future-plans/fp_1.jpg" class="future-plans-img" alt="">
+                                    <img src="resources/img/future-plans/fp_1.jpg" class="future-plans-img" alt="">
                                     <h3>Expansion</h3>
                                     <h4>of Infrastructure</h4>
                                     <p>
@@ -421,7 +421,7 @@
                             <div class="future-plans-wrap">
 
                                 <div class="future-plans-item">
-                                    <img src="/resources/img/future-plans/fp_2.jpg" class="future-plans-img" alt="">
+                                    <img src="resources/img/future-plans/fp_2.jpg" class="future-plans-img" alt="">
                                     <h3>Attraction</h3>
                                     <h4>of Candidates</h4>
                                     <p>
@@ -436,7 +436,7 @@
                             <div class="future-plans-wrap">
 
                                 <div class="future-plans-item">
-                                    <img src="/resources/img/future-plans/fp_3.jpg" class="future-plans-img" alt="">
+                                    <img src="resources/img/future-plans/fp_3.jpg" class="future-plans-img" alt="">
                                     <h3>Maintain</h3>
                                     <h4>international linkages</h4>
                                     <p>
@@ -451,7 +451,7 @@
                             <div class="future-plans-wrap">
 
                                 <div class="future-plans-item">
-                                    <img src="/resources/img/future-plans/fp_4.jpg" class="future-plans-img" alt="">
+                                    <img src="resources/img/future-plans/fp_4.jpg" class="future-plans-img" alt="">
                                     <h3>Affiliation</h3>
                                     <h4>to Mbarara University</h4>
                                     <p>
