--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
     <main>
         <!-- Hero Section -->
 
-        <section id="hero" class="d-flex justify-content-center align-items-center">
+        <section id="hero" class="d-flex justify-content-center align-items-center" style="
+  background-image: url("resources/img/hero/hero.jpg") top center;">
 
             <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
                 <h1 class="text-sm">School of Psychiatric Clinical Officers, <br>Butabika</h1>
