--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header id="header" class="header d-flex align-items-center">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="/resources/img/logo/logo.jpg" alt="" class="img-fluid">
+                <img src="resources/img/logo/logo.jpg" alt="" class="img-fluid">
                 <h1><span class="auto-type"></span></h1>
             </a>
             <nav id="navbar" class="navbar">
