--- a/guild-council.html
+++ b/guild-council.html
@@ -167,7 +167,7 @@
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
-              <h4>Asingura emmanuel Charles</h4>
+              <h4>Atyang Emmanuel</h4>
               <span>Vice Guild President</span>
             </div>
           </div>
