--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
 
                             <div class="swiper-slide">
                                 <div class="item">
-                                    <h3 class="mb-3">1. Reporting for academic semester one</h3>
-                                    <h4 class="mb-3">We are pleased to announce that the reporting date for the upcoming academic semester is scheduled for the 12th of February 2024.</h4>
+                                    <h3 class="mb-3">1. Provisional transcripts for finalists are out</h3>
+                                    <h4 class="mb-3">We are pleased to announce that the reporting date for the upcoming academic semester is scheduled for the 25th April 2025</h4>
                                     <p>Students are encouraged to mark their calendars and prepare for an exciting start to the new semester.</p>
                                 </div>
                             </div><!-- End slide item -->
